--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ html {
 
 body {
     font-family: 'DM Sans', sans-serif;
-    color: rgb(211, 222, 222);
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,9 +28,98 @@ body {
     margin: auto;
     width: 100vw;
     font-family: 'DM Sans', sans-serif;
-    font-size: 50px;
-    font-weight: 500;
     text-align: center;
-    border-bottom: 2px solid wheat;
+    border-bottom: 2px solid grey;
     box-shadow: 0 0 5px white;
+    text-decoration: none;
+}
+
+/* Content and Game area */
+
+.content-area {
+    margin: 35px 15px;
+    max-width: 700px;
+    height: 70vh;
+    background-color: rgba(51, 51, 51, 0.7);
+    padding: 15px;
+    border-radius: 8px;
+    border: 1.5px solid grey;
+    box-shadow: 0 0 8px 2px grey;
+    align-self: center;
+}
+
+.content-area p {
+    padding: 5px;
+    text-align: center;
+
+}
+
+h2,
+h3 {
+    padding: 5px;
+    text-align: center;
+}
+
+#lyrics {
+    margin: 5%;
+}
+
+ul {
+    list-style-type: none;
+}
+
+
+
+
+/* Buttons */
+
+input[type='radio'] {
+    accent-color: rgb(248, 88, 2);
+}
+
+button {
+    margin-top: 35px;
+    border-radius: 5px;
+    padding: 12px 20px;
+    font-size: 100%;
+    background-color: rgb(248, 88, 2);
+    color: black;
+    align-self: center;
+}
+
+button:hover {
+    margin-top: 25px;
+    border-radius: 5px;
+    padding: 12px 20px;
+    font-size: 100%;
+    background-color: black;
+    color: rgb(248, 88, 2);
+}
+
+
+
+/* Scores */
+
+#score-area {
+
+    margin: 5px auto;
+    width: 65%;
+    font-size: 1rem;
+    text-align: center;
+
+}
+
+.scores {
+    display: inline-block;
+    padding: 20px;
+}
+
+#score-correct {
+    margin: 3px;
+    padding: 5px;
+}
+
+#score-incorrect {
+    margin: 3px;
+    padding: 5px;
 }
