--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ a {
 
 .content-area {
     margin: 35px 15px;
+    width: 80%;
     height: 70vh;
     background-color: rgba(51, 51, 51, 0.7);
     padding: 15px;
