add media query for larger screens and add new style to play and next buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ body {
     text-align: center;
     border-bottom: 2px solid grey;
     box-shadow: 0 0 5px white;
+    color: white;
 
 }
 
@@ -90,8 +91,9 @@ ul li {
     border-radius: 5px;
     padding: 12px 20px;
     font-size: 100%;
-    background-color: rgb(248, 88, 2);
-    color: black;
+    background: none;
+    color: white;
+    border: 2px solid grey;
 }
 
 .play-btn:hover {
@@ -99,8 +101,10 @@ ul li {
     border-radius: 5px;
     padding: 12px 20px;
     font-size: 100%;
-    background-color: black;
-    color: rgb(248, 88, 2);
+    background: none;
+    color: white;
+    border: 2px solid grey;
+    box-shadow: 0 0 4px 2px grey;
 }
 
 .submit-btn {
@@ -108,8 +112,9 @@ ul li {
     border-radius: 5px;
     padding: 12px 20px;
     font-size: 100%;
-    background-color: rgb(248, 88, 2);
-    color: black;
+    background: none;
+    color: white;
+    border: 2px solid grey;
 }
 
 .submit-btn:hover {
@@ -117,8 +122,11 @@ ul li {
     border-radius: 5px;
     padding: 12px 20px;
     font-size: 100%;
-    background-color: black;
-    color: rgb(248, 88, 2);
+    background: none;
+    color: white;
+    border: 2px solid grey;
+    box-shadow: 0 0 4px 2px grey;
+    
 }
 
 .btn {
@@ -150,4 +158,29 @@ ul li {
 
 .btn:disabled {
     cursor: no-drop;
+}
+
+
+
+/* Media Queries */
+/* Media query for screens with minimum width of 768px (for tablets and larger) */
+
+@media screen and (min-width: 768px) {
+    .content-area {
+    margin: 35px 15px;
+    width: 60%;
+    height: 70vh;
+    background-color: rgba(51, 51, 51, 0.7);
+    padding: 15px;
+    border-radius: 8px;
+    border: 1.5px solid grey;
+    box-shadow: 0 0 8px 2px grey;
+    align-self: center;
+}
+
+#lyrics {
+    margin: 5%;
+    font-size: medium;
+}
+
 }
