--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 
 /* Background image */
 html {
-    background-image: url('../images/background.jpg');
+    background-image: url('../images/background.webp');
     background-size: cover;
     background-repeat: no-repeat;
 }
