add black bg color and add doc strongs to js file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ html {
 
 body {
     font-family: 'DM Sans', sans-serif;
-    color: white;
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
