--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,12 @@ html {
     background-image: url('../images/background.webp');
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: black;
 }
 
 body {
     font-family: 'DM Sans', sans-serif;
-    color: black;
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
