--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,10 +176,13 @@ ul li {
 }
 
 .error-img {
-    width: 50%;
-    height: 30%;
+    width: 30%;
+    height: 60%;
 }
 
+.here {
+    text-decoration: underline;
+}
 
 
 
