--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,23 @@ ul li {
     cursor: no-drop;
 }
 
+/* Timer */
+
+#timer-container {
+    display: flex;
+    align-items: center;
+}
+
+#timer {
+    margin: 40px auto;
+    border-radius: 5px;
+    padding: 12px 20px;
+    font-size: 100%;
+    background: none;
+    color: white;
+    border: 2px solid grey;
+}
+
 /* 404 Page */
 
 .container {
