--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ a {
 .content-area {
     margin: 35px 15px;
     width: 80%;
-    height: 80vh;
+    height: 85vh;
     background-color: rgba(51, 51, 51, 0.7);
     padding: 15px;
     border-radius: 8px;
@@ -106,6 +106,10 @@ h3 {
 #lyrics {
     margin: 5%;
     font-size: medium;
+}
+
+#question-no {
+    margin: 5%;
 }
 
 ul {
