Remove name section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,15 +93,6 @@ a {
 
 }
 
-#name {
-    margin: 5% auto;
-    border-radius: 5px;
-    padding: 12px 20px;
-    font-size: 100%;
-    background: none;
-    color: white;
-    border: 2px solid grey;
-}
 
 h2,
 h3 {
@@ -134,7 +125,7 @@ ul li {
 
 /* Buttons */
 
-.play-btn {
+#play-btn {
     margin: 5% auto;
     border-radius: 5px;
     padding: 12px 20px;
@@ -144,7 +135,7 @@ ul li {
     border: 2px solid grey;
 }
 
-.play-btn:hover {
+#play-btn:hover {
     margin: 5% auto;
     border-radius: 5px;
     padding: 12px 20px;
@@ -254,7 +245,7 @@ ul li {
         align-self: center;
     }
 
-    .play-btn {
+    #play-btn {
         margin: 2% auto;
         border-radius: 5px;
         padding: 12px 20px;
@@ -264,7 +255,7 @@ ul li {
         border: 2px solid grey;
     }
     
-    .play-btn:hover {
+    #play-btn:hover {
         margin: 2% auto;
         border-radius: 5px;
         padding: 12px 20px;
